--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,14 +1,15 @@
-<header class="header">
+<header [ngClass]="{'header': true, 'disable': isGlobalPopupOpen}">
   <div class="header__title">
-      <a routerLink="/"><img src="assets/logo.png" alt="Logo" class="header__logo"></a>
-      <div class="header__container">
-          <p class="header__main-text">
-              Факультет інформаційних технологій
-          </p>
-          <p class="header__secondary-text">
-              Faculty of Information Technology
-          </p>
-      </div>
+    <a routerLink="/"><img src="assets/logo.png" alt="Logo" class="header__logo"></a>
+    <div class="header__container">
+      <p class="header__main-text">
+        Факультет інформаційних технологій
+      </p>
+      <p class="header__secondary-text">
+        Faculty of Information Technology
+      </p>
+    </div>
   </div>
-  <button class="header__button">Обрати групу</button>
+  <button class="header__button" (click)="openPopup()">{{group || "Обрати групу"}}</button>
 </header>
+<app-group-popup *ngIf="isPopupOpen" (closePopupEvent)="closePopup()"></app-group-popup>
