--- a/src/app/month/month.component.scss
+++ b/src/app/month/month.component.scss
@@ -1,3 +1,5 @@
+@import '/src/variables.scss';
+
 .month {
   &__container {
     padding: 35px 50px 50px;
@@ -6,32 +8,229 @@
     height: calc(100% - 200px);
 
     @media screen and (max-width: 1700px) {
-        padding: 5px 50px 50px;
-        height: calc(100% - 170px);
+      padding: 5px 50px 50px;
+      height: calc(100% - 170px);
     }
 
     @media screen and (max-width: 960px) {
-        padding: 5px 10px 50px;
-        height: calc(100% - 160px);
+      padding: 5px 10px 50px;
+      height: calc(100% - 160px);
     }
 
     @media screen and (max-width: 860px) {
-        padding: 5px 50px 20px;
-        height: calc(100% - 130px);
-        justify-content: center;
+      padding: 5px 50px 20px;
+      height: calc(100% - 130px);
+      justify-content: center;
     }
 
     @media screen and (max-width: 660px) {
-        height: calc(100% - 100px);
-        padding: 5px 5px 10px;
+      height: calc(100% - 100px);
+      padding: 5px 5px 10px;
     }
   }
 
   &__calendar {
-    width: 45%
+    width: 45%;
+
+    @media screen and (max-width: 860px) {
+      width: 80%;
+    }
+
+    @media screen and (max-width: 660px) {
+      width: 95%;
+    }
   }
 
   &__schedule {
     width: 40%;
+
+    @media screen and (max-width: 860px) {
+      display: none;
+    }
   }
+}
+
+.popup {
+  position: absolute;
+  border-radius: 5px;
+  width: 80%;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: opacity 250ms ease-in-out;
+
+  &__date {
+    font-size: 22px;
+    text-transform: uppercase;
+    color: $color-20;
+  }
+
+  &__weekday {
+    font-size: 12px;
+    color: $color-60;
+  }
+
+  &__container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+  }
+
+  &__class {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+
+    &--sub {
+      width: 50%;
+    }
+
+    &--empty {
+      justify-content: center;
+    }
+
+    &__full {
+      align-self: center;
+      height: 0.5px;
+      width: 30%;
+      background-color: $color-10;
+    }
+
+    &__container {
+      display: flex;
+      width: 100%;
+      height: 25%;
+      margin-bottom: 5px;
+      justify-content: space-between;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+
+      &--empty {
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        p:first-child {
+          margin-bottom: 30px;
+        }
+      }
+    }
+
+
+    &__subgroup {
+      font-size: 12px;
+      color: $color-10;
+
+      &__container {
+        display: flex;
+        justify-content: end;
+        width: 100%;
+        margin-bottom: 4px;
+      }
+    }
+
+    &__subgroups {
+      width: 93%;
+      display: flex;
+      justify-content: space-around;
+    }
+
+    &__group {
+      display: flex;
+      justify-content: center;
+      background: rgba($color-70, 0.2);
+      border-radius: 5px;
+      padding: 5px;
+      width: 94%;
+
+      &--red {
+        background: rgba($color-40, 0.1);
+      }
+    }
+
+    &__divider {
+      width: 1px;
+      height: 100%;
+      background-color: $color-60;
+      margin: 0 5px;
+
+      &--light {
+        background-color: $color-70;
+      }
+    }
+
+    &__empty {
+      height: 1px;
+      width: 30%;
+      background-color: $color-10;
+    }
+
+    &__name {
+      font-size: 13px;
+      color: $color-10;
+      text-align: center;
+    }
+
+    &__type {
+      font-size: 10px;
+      color: $color-20;
+      text-align: center;
+    }
+
+    &__professor {
+      font-size: 12px;
+      color: $color-10;
+      text-align: center;
+    }
+
+    &__place {
+      font-size: 12px;
+      color: $color-20;
+      text-align: center;
+
+      img {
+        height: 8px;
+      }
+    }
+  }
+
+  &__time {
+    font-size: 12px;
+    width: 6%;
+    color: $color-10;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-right: 10px;
+  }
+
+  &__close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    background: none;
+  }
+}
+
+.disable {
+  filter: blur(4px);
+  pointer-events: none;
 }
