--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -2,41 +2,46 @@
 
 .nav {
   &__menu {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      list-style-type: none;
-      width: 360px;
-      margin: 20px auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style-type: none;
+    width: 360px;
+    margin: 20px auto;
 
-      @media screen and (max-width: 960px) {
-          margin: 15px auto;
-      }
+    @media screen and (max-width: 960px) {
+      margin: 15px auto;
+    }
+
+    @media screen and (max-width: 660px) {
+      margin: 10px auto;
+      width: 220px;
+    }
+
+    &__item {
+      font-style: normal;
+      font-weight: normal;
+      font-size: 18px;
+      color: $color-10;
+      transition: color 200ms ease-in;
 
       @media screen and (max-width: 660px) {
-          margin: 10px auto;
-          width: 220px;
+        font-size: 14px;
       }
 
-      &__item {
-          font-style: normal;
-          font-weight: normal;
-          font-size: 18px;
-          color: $color-10;
-          transition: color 200ms ease-in;
-
-          @media screen and (max-width: 660px) {
-              font-size: 14px;
-          }
-
-          &--active {
-              font-weight: 900;
-              color: $color-40;
-          }
-
-          &:hover {
-              color: $color-20;
-          }
+      &--active {
+        font-weight: 900;
+        color: $color-40;
       }
+
+      &:hover {
+        color: $color-20;
+      }
+    }
   }
+}
+
+.disable {
+  filter: blur(4px);
+  pointer-events: none;
 }
