--- a/src/app/table/table.component.scss
+++ b/src/app/table/table.component.scss
@@ -1,6 +1,6 @@
 @import '/src/variables.scss';
 
-.week__container{
+.week__container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -14,140 +14,142 @@
   height: calc(100% - 155px);
 
   @media screen and (max-width: 1200px) {
-      height: calc(100% - 213px);
-      width: 70%;
-      margin: 0 auto 30px;
+    height: calc(100% - 213px);
+    width: 70%;
+    margin: 0 auto 30px;
   }
 
   @media screen and (max-width: 960px) {
-      height: calc(100% - 203px);
+    height: calc(100% - 203px);
   }
 
   @media screen and (max-width: 768px) {
-      width: 80%;
-      padding: 10px;
-      height: calc(100% - 213px);
+    width: 80%;
+    padding: 10px;
+    height: calc(100% - 213px);
   }
 
   @media screen and (max-width: 660px) {
-      height: calc(100% - 172px);
-      width: 90%;
+    height: calc(100% - 172px);
+    width: 90%;
   }
-  
-  &__days{
-      width: 97%;
+
+  &__days {
+    width: 97%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+    &__wrapper {
+      width: 100%;
+      height: 6%;
       display: flex;
-      flex-direction: row;
-      justify-content: space-around;
+      justify-content: flex-end;
+      margin-bottom: 5px;
+    }
 
-      &__wrapper {
-          width: 100%;
-          height: 6%;
-          display: flex;
-          justify-content: flex-end;
-          margin-bottom: 5px;
-      }
-
-      &__wrap{
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-      }
-
-      &__name {
-          font-size: 14px;
-          color: $color-20;
-      }
-
-      &__number {
-          font-size: 18px;
-          text-transform: uppercase;
-          color: $color-10;
-      }
-
-  }
-  &__vertical{
+    &__wrap {
       display: flex;
-      flex-direction: row;
-      justify-content: space-evenly;
+      flex-direction: column;
       align-items: center;
-      height: 94%;
+    }
 
-      @media screen and (max-width: 1200px){
-          height: 100%;
+    &__name {
+      font-size: 14px;
+      color: $color-20;
+    }
+
+    &__number {
+      font-size: 18px;
+      text-transform: uppercase;
+      color: $color-10;
+    }
+
+  }
+
+  &__vertical {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 94%;
+
+    @media screen and (max-width: 1200px) {
+      height: 100%;
+    }
+
+    &__time {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-around;
+      vertical-align: middle;
+      width: 3%;
+      height: 98%;
+
+      @media screen and (max-width: 1200px) {
+        display: none;
       }
 
-      &__time{
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: space-around;
-          vertical-align: middle;
-          width: 3%;
-          height: 98%;
-
-          @media screen and (max-width: 1200px){
-              display: none;
-          }
-
-          &__classes{
-              display: flex;
-              align-items: center;
-              text-align: center;
-              font-size: 14px;                
-          }
-
-          &__container {
-              display: flex;
-              flex-direction: column;
-              align-items: center;
-              justify-content: space-around;
-              vertical-align: middle;
-              width: 100%;
-              height: 92%;
-          }
-
-          &__tablet {
-              display: none;
-
-              @media screen and (max-width: 1200px){
-                  display: block;
-                  height: 8%;
-                  width: 100%;
-              }
-          }
+      &__classes {
+        display: flex;
+        align-items: center;
+        text-align: center;
+        font-size: 14px;
       }
 
-      &__sch{
-          display: flex;
-          flex-direction: row;
-          margin-left: 5px;
-          width: 97%;
-          height: 98%;
+      &__container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        vertical-align: middle;
+        width: 100%;
+        height: 92%;
+      }
 
-          @media screen and (max-width: 1200px){
-              height: 100%;
-              width: 95%;
-          }
-          
-              &__day{
-                  background-color: #F5F3F4;
-                  margin-right: 3px;
+      &__tablet {
+        display: none;
 
-                  &:nth-child(5) {
-                      margin-right: 0;
-                  }
+        @media screen and (max-width: 1200px) {
+          display: block;
+          height: 8%;
+          width: 100%;
+        }
+      }
+    }
 
-                  @media screen and (max-width: 1200px) {
-                      display: none;
-                  }
+    &__sch {
+      display: flex;
+      flex-direction: row;
+      margin-left: 5px;
+      width: 97%;
+      height: 98%;
 
-              }
-          }
+      @media screen and (max-width: 1200px) {
+        height: 100%;
+        width: 95%;
+      }
+
+      &__day {
+        background-color: #F5F3F4;
+        margin-right: 3px;
+        width: 20%;
+
+        &:nth-child(5) {
+          margin-right: 0;
+        }
+
+        @media screen and (max-width: 1200px) {
+          display: none;
+        }
+
+      }
+    }
   }
 }
 
-.lesson{
+.lesson {
   margin-bottom: 3px;
   border-radius: 5px;
   display: flex;
@@ -160,121 +162,198 @@
   height: 22%;
 
   &:last-child {
-      margin-bottom: 0;
+    margin-bottom: 0;
   }
 
-  &__name{
-      font-size: 15px;
-      text-align: center;
-      
-  }
-  &__type{
-      color: $color-20;
-      text-align: center;
-      font-size: 12px;
-  }
-  &__teacher{
-      text-align: center;
-      font-size: 14px;
-  }
-  &__classroom{
-      font-size: 14px;
-      color: $color-20;
-      text-align: center;
+  &__name {
+    font-size: 14px;
+    text-align: center;
+
   }
 
-  &__type1:nth-child(odd){
-      background-color: #BA181B1A;
+  &__type {
+    color: $color-20;
+    text-align: center;
+    font-size: 12px;
   }
-  &__type1:nth-child(even){
-      background-color: #D3D3D333;        
+
+  &__teacher {
+    text-align: center;
+    font-size: 14px;
   }
-  &__type2:nth-child(odd){
-      background-color:  #D3D3D333;
+
+  &__classroom {
+    font-size: 14px;
+    color: $color-20;
+    text-align: center;
   }
-  &__type2:nth-child(even){
-      background-color: #BA181B1A;
+
+  &__type1:nth-child(odd) {
+    background-color: #BA181B1A;
+  }
+
+  &__type1:nth-child(even) {
+    background-color: #D3D3D333;
+  }
+
+  &__type2:nth-child(odd) {
+    background-color: #D3D3D333;
+  }
+
+  &__type2:nth-child(even) {
+    background-color: #BA181B1A;
   }
 
   &__empty {
-      width: 30%;
-      height: 1px;
-      background-color: $color-10;
+    width: 30%;
+    height: 1px;
+    background-color: $color-10;
   }
 
   &__subgroup {
-      &__container {
-          display: flex;
-          align-items: center;
-          justify-content: space-around;
-          padding: 10px 0;
-          height: 5%;
-      }
+    &__container {
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      padding: 10px 0;
+      height: 5%;
+    }
 
-      &__title {
-          font-size: 16px;
-          color: $color-10;
-      }
+    &__title {
+      font-size: 16px;
+      color: $color-10;
+    }
   }
 
   &__container {
-      height: 95%;
+    height: 95%;
   }
 }
 
-.vertical-line{
+.vertical-line {
   border-left: 1px solid #B1A7A6;
   margin: 5px;
   width: 1px;
 }
 
-.sg{
+.sg {
   display: flex;
   flex-direction: row;
   height: 100%;
+  width: 100%;
 
   @media screen and (max-width: 1200px) {
-      width: 100%;
-      justify-content: space-evenly;
+    width: 100%;
+    justify-content: space-evenly;
   }
 }
 
-.subgroup1, .subgroup2{
+.subgroup1,
+.subgroup2 {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   height: 100%;
+  width: 50%;
 }
 
 
 
-@media screen and (min-width: 1201px){
-  .for-tablet{
-      display: none;
+@media screen and (min-width: 1201px) {
+  .for-tablet {
+    display: none;
+  }
+
+  .days-panel-for-tablet {
+    display: none;
   }
 
   .week__container__vertical__time--tablet {
-      display: none;
+    display: none;
   }
 }
 
-@media screen and (max-width: 1200px){
+@media screen and (max-width: 1200px) {
   .week__container__days__wrapper {
-      display: none;
+    display: none;
   }
 
-  .for-tablet{
-     height: 100%;
-     width: 100%;
+  .for-tablet {
+    height: 100%;
+    width: 100%;
   }
 
-  .week__container__vertical__time--tablet {
+  .days-panel-for-tablet {
+    height: 58px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+
+    &__daycont {
       display: flex;
       flex-direction: column;
-      height: 100%;
-      width: 5%;
-      margin: 0 10px;
+      align-items: center;
+      text-align: center;
+
+      &__active {
+        background-color: $color-40;
+        color: white;
+        border-radius: 5px;
+        padding: 5px 5px 0;
+        margin: -4px 0 12px;
+
+        @media screen and (max-width: 560px) {
+          margin: -4px 0 16px;
+        }
+
+        .days-panel-for-tablet__day {
+          color: $color-80;
+        }
+
+        .days-panel-for-tablet__weekday {
+          color: $color-80;
+        }
+      }
+    }
+
+    &__day {
+      font-size: 18px;
+      color: $color-10;
+      text-transform: uppercase;
+      pointer-events: none;
+    }
+
+    &__weekday {
+      font-size: 16px;
+      color: $color-20;
+      pointer-events: none;
+    }
   }
 
+  .week__container__vertical__time--tablet {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 5%;
+    margin: 0 10px;
+  }
+
+}
+
+@media screen and (max-width: 560px) {
+  .days-panel-for-tablet {
+    &__day {
+      font-size: 16px;
+    }
+
+    &__weekday {
+      font-size: 14px;
+    }
+  }
+}
+
+.disable {
+  filter: blur(4px);
+  pointer-events: none;
 }
