--- a/src/app/week/week.component.scss
+++ b/src/app/week/week.component.scss
@@ -1,1 +1,114 @@
 @import '/src/variables.scss';
+
+.week-table {
+  @media screen and (max-width: 1200px) {
+    display: none;
+  }
+}
+
+.week-schedule {
+  display: none;
+  width: 100%;
+  padding: 0 20px;
+  box-sizing: border-box;
+  height: calc(100% - 155px);
+  margin: 0 auto;
+
+  @media screen and (max-width: 1200px) {
+    display: block;
+  }
+
+  @media screen and (max-width: 1200px) {
+    height: calc(100% - 213px);
+  }
+
+  @media screen and (max-width: 960px) {
+    height: calc(100% - 203px);
+  }
+
+  @media screen and (max-width: 768px) {
+    width: 80%;
+    padding: 10px;
+    height: calc(100% - 213px);
+  }
+
+  @media screen and (max-width: 660px) {
+    height: calc(100% - 172px);
+    width: 90%;
+  }
+}
+
+@media screen and (min-width: 1201px) {
+  .days-panel-for-tablet {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+
+  .days-panel-for-tablet {
+    height: 58px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+
+    &__daycont {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+
+      &__active {
+        background-color: $color-40;
+        color: white;
+        border-radius: 5px;
+        padding: 5px 5px 0;
+        margin: -4px 0 12px;
+
+        @media screen and (max-width: 500px) {
+          margin: -4px 0 0;
+        }
+
+        .days-panel-for-tablet__day {
+          color: $color-80;
+        }
+
+        .days-panel-for-tablet__weekday {
+          color: $color-80;
+        }
+      }
+    }
+
+    &__day {
+      font-size: 18px;
+      color: $color-10;
+      text-transform: uppercase;
+      pointer-events: none;
+    }
+
+    &__weekday {
+      font-size: 16px;
+      color: $color-20;
+      pointer-events: none;
+    }
+  }
+
+
+}
+
+@media screen and (max-width: 560px) {
+  .days-panel-for-tablet {
+    &__day {
+      font-size: 16px;
+    }
+
+    &__weekday {
+      font-size: 14px;
+    }
+  }
+}
+
+.disable {
+  filter: blur(4px);
+  pointer-events: none;
+}
